RESOLVED FIXED150937
Regression(r192038): Safari cannot load any pages
https://bugs.webkit.org/show_bug.cgi?id=150937
Summary Regression(r192038): Safari cannot load any pages
Chris Dumez
Reported 2015-11-05 10:23:43 PST
Safari cannot load any pages after r192038.
Attachments
Fix (1.56 KB, patch)
2015-11-05 10:29 PST, Chris Dumez
no flags
Regression test (2.50 KB, patch)
2015-11-05 11:22 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-11-05 10:24:11 PST
Chris Dumez
Comment 2 2015-11-05 10:29:16 PST
Chris Dumez
Comment 3 2015-11-05 10:31:44 PST
Comment on attachment 264870 [details] Fix Clearing flags on attachment: 264870 Committed r192060: <http://trac.webkit.org/changeset/192060>
Chris Dumez
Comment 4 2015-11-05 10:31:49 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5 2015-11-05 10:43:12 PST
Comment on attachment 264870 [details] Fix Why was this not caught by tests?
Chris Dumez
Comment 6 2015-11-05 10:48:39 PST
(In reply to comment #5) > Comment on attachment 264870 [details] > Patch > > Why was this not caught by tests? I think because this relies on load deferring. I am looking into adding an internals API that would enable load deferring so we can add test coverage for this.
Chris Dumez
Comment 7 2015-11-05 10:53:25 PST
(In reply to comment #6) > (In reply to comment #5) > > Comment on attachment 264870 [details] > > Patch > > > > Why was this not caught by tests? > > I think because this relies on load deferring. I am looking into adding an > internals API that would enable load deferring so we can add test coverage > for this. Actually, there is already testRunner.setDefersLoading(bool). I will see if I can add coverage for this bug using this API.
Chris Dumez
Comment 8 2015-11-05 11:22:36 PST
Reopening to attach new patch.
Chris Dumez
Comment 9 2015-11-05 11:22:38 PST
Created attachment 264872 [details] Regression test
Geoffrey Garen
Comment 10 2015-11-05 11:23:49 PST
Comment on attachment 264872 [details] Regression test r=me
WebKit Commit Bot
Comment 11 2015-11-05 12:38:19 PST
Comment on attachment 264872 [details] Regression test Clearing flags on attachment: 264872 Committed r192069: <http://trac.webkit.org/changeset/192069>
WebKit Commit Bot
Comment 12 2015-11-05 12:38:23 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 13 2015-11-05 13:27:03 PST
*** Bug 150926 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.