Regression(r192038): Safari cannot load any pages https://bugs.webkit.org/show_bug.cgi?id=150937 <rdar://problem/23413859>

Reviewed by Alex Christensen.

Make sure we use the current "defersLoading" state instead of the
original one when constructing / initializing the NetworkLoad.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::startNetworkLoad):

Canonical link: https://commits.webkit.org/169142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192060 268f45cc-cd09-0410-ab3c-d52691b4dbfc